// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Class #get should return single class details 1`] = `
Object {
  "name": "posts",
}
`;

exports[`Class #list should return list of syncano classes 1`] = `
Array [
  Object {
    "name": "posts",
  },
  Object {
    "name": "comments",
  },
]
`;
